# game_of_life

./: .gitignore  Dockerfile  README.md  classic_patterns.json  initial_states.json  main.py  pyproject.toml  pytest.ini  requirements.txt
config/development/: settings.yaml
simple_version/: main.py
src/app/: app.py
src/app/utils/: config.py
tests/unit/: test_app.py
