[tool.poetry]
name = "game-of-life"
version = "0.1.0"
description = ""
authors = ["Ludovic Gardy <ludovic.gardy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
